<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="6dip"
        android:text="@string/main_header"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="1dip"
        android:text="@string/settings_header"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="12dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:background="#ff106510" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:orientation="horizontal" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="0.1"
            android:background="#ff106510" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:layout_marginTop="1dip"
            android:text="@string/settings_head_local"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="0.1"
            android:background="#ff106510" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/TBLayoutSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_sysop"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/sysop_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/sysop_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_location"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/location_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_local"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/local_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/local_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="12dip"
        android:orientation="horizontal" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="0.1"
            android:background="#ff106510" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:layout_marginTop="1dip"
            android:text="@string/settings_head_remote"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:layout_weight="0.1"
            android:background="#ff106510" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="10dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_remote"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/remote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/remote_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_remoteho"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/remoteho_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/remoteho_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_remotepo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/remotepo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/remotepo_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_remotepw"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/remotepw_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:ems="10"
                android:hint="@string/remotepw_hint"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" >

                <requestFocus />
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>