<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="6dip"
        android:text="@string/main_header"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="12dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:background="#ff106510" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/log"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip" >
            </TextView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/poll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:text="@string/poll_button_name" />

    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:text="@string/menu_settings" />

</LinearLayout>